<<<<<<< /tmp/mtn.JGMAXH
2011-03-17  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add ./config.rpath, m4/ChangeLog.

||||||| /tmp/mtn.B2AF5Z
=======
2011-03-31  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add ./config.rpath, m4/ChangeLog.

	* m4/lib-ld.m4: New file, from gettext-0.18.1.
	* m4/lib-link.m4: New file, from gettext-0.18.1.
	* m4/lib-prefix.m4: New file, from gettext-0.18.1.
	* m4/nls.m4: New file, from gettext-0.18.1.
	* m4/po.m4: New file, from gettext-0.18.1.
	* m4/progtest.m4: New file, from gettext-0.18.1.
	* Makefile.am (EXTRA_DIST): Add ./config.rpath.

>>>>>>> /tmp/mtn.5IN4AD
2011-03-10  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: New file, from gettext-0.18.1.
	* m4/iconv.m4: New file, from gettext-0.18.1.
	* m4/lib-ld.m4: New file, from gettext-0.18.1.
	* m4/lib-link.m4: New file, from gettext-0.18.1.
	* m4/lib-prefix.m4: New file, from gettext-0.18.1.
	* m4/nls.m4: New file, from gettext-0.18.1.
	* m4/po.m4: New file, from gettext-0.18.1.
	* m4/progtest.m4: New file, from gettext-0.18.1.
	* Makefile.am (EXTRA_DIST): Add ./config.rpath.

2011-03-09  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: New file, from gettext-0.18.1.
	* m4/iconv.m4: New file, from gettext-0.18.1.
	* m4/lib-ld.m4: New file, from gettext-0.18.1.
	* m4/lib-link.m4: New file, from gettext-0.18.1.
	* m4/lib-prefix.m4: New file, from gettext-0.18.1.
	* m4/nls.m4: New file, from gettext-0.18.1.
	* m4/po.m4: New file, from gettext-0.18.1.
	* m4/progtest.m4: New file, from gettext-0.18.1.
	* Makefile.am (EXTRA_DIST): Add ./config.rpath.

2011-02-14  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: New file, from gettext-0.18.1.
	* m4/iconv.m4: New file, from gettext-0.18.1.
	* m4/lib-ld.m4: New file, from gettext-0.18.1.
	* m4/lib-link.m4: New file, from gettext-0.18.1.
	* m4/lib-prefix.m4: New file, from gettext-0.18.1.
	* m4/nls.m4: New file, from gettext-0.18.1.