@@ -1,16 +1,16 @@
 if WINDOWS
-WIN_LDFLAGS=-no-undefined -export-symbols libManuProC_Base@DATABASE_TYPE@.def 
-DLL_LDADD=@SIGC_LIBS@ @ECPG_LIBS@ -lintl -ladvapi32 -lsecur32
+	WIN_LDFLAGS=-no-undefined -export-symbols libManuProC_Base@DATABASE_TYPE@.def 
+	DLL_LDADD=@SIGC_LIBS@ @MPC_DB_LIBS@ -lintl -ladvapi32 -lsecur32
 #libManuProC_Base_res.o
-DLL_DEF=libManuProC_Base@DATABASE_TYPE@.def
-WIN_CXXFLAGS=
-PLATFORM=w32
+	DLL_DEF=libManuProC_Base@DATABASE_TYPE@.def
+	WIN_CXXFLAGS=
+	PLATFORM=w32
 else
-WIN_LDFLAGS=
-DLL_LDADD=@SIGC_LIBS@ @ECPG_LIBS@
-DLL_DEF=
-WIN_CXXFLAGS=
-PLATFORM=linux
+	WIN_LDFLAGS=
+	DLL_LDADD=@SIGC_LIBS@ @MPC_DB_LIBS@
+	DLL_DEF=
+	WIN_CXXFLAGS=
+	PLATFORM=linux
 endif
 
 libManuProC_Base_sqlite3.def: libManuProC_Base.def libManuProC_Base_sqlite.defadd \
@@ -29,14 +29,14 @@ libManuProC_Base_res.o: libManuProC_Base.rc
 #libManuProC_Base_res.o: libManuProC_Base.rc
 #	i586-mingw32msvc-windres -i $< -o $@ -D BUILDNUMBER=0
 
-AM_CXXFLAGS=@ECPG_INCLUDES@ @SIGC_CFLAGS@ -DlibManuProC_Base_COMPILATION $(WIN_CXXFLAGS)
+AM_CXXFLAGS=@MPC_DB_CFLAGS@ @SIGC_CFLAGS@ -DlibManuProC_Base_COMPILATION $(WIN_CXXFLAGS)
 
 lib_LTLIBRARIES=libManuProC_Base.la
 libManuProC_Base_la_LIBADD=$(DLL_LDADD)
 
 includedir=@includedir@/ManuProC_Base
 
-AM_LDFLAGS=@LDFLAGS@ @ECPG_LDFLAGS@ $(WIN_LDFLAGS)
+AM_LDFLAGS=@LDFLAGS@ @MPC_DB_LDFLAGS@ $(WIN_LDFLAGS)
 
 if DATABASE
 DB_SRCES= \
