@@ -1,3 +1,7 @@
+2019-10-26  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.
+
 <<<<<<< /tmp/mtn.JGMAXH
 2011-03-17  gettextize  <bug-gnu-gettext@gnu.org>
 
